src/rust/type_system/snapshots/syn_state_machine__rust__type_system__trait_and_lifetime_bounds__tests__it_matches_lifetime_type_param_bound.snap
---
source: src/rust/type_system/trait_and_lifetime_bounds.rs
expression: "insta_match_test!(+ parse TypeParamBound<Infallible, SimplePath> : 'a)"
---
Ok(
    Lt(
        LifetimeToken(
            Ident(
                a,
            ),
        ),
    ),
)
