src/rust/type_system/snapshots/syn_state_machine__rust__type_system__trait_and_lifetime_bounds__tests__it_matches_lifetimes_bounds.snap
---
source: src/rust/type_system/trait_and_lifetime_bounds.rs
expression: "insta_match_test!(+ parse LifetimeBounds : 'a + 'b)"
---
Ok(
    MinLength(
        Interlace {
            values: [
                LifetimeToken {
                    ident: Ident(
                        a,
                    ),
                },
                LifetimeToken {
                    ident: Ident(
                        b,
                    ),
                },
            ],
        },
    ),
)
