src/rust/type_system/snapshots/syn_state_machine__rust__type_system__trait_and_lifetime_bounds__tests__it_matches_path_type_param_bound.snap
---
source: src/rust/type_system/trait_and_lifetime_bounds.rs
expression: "insta_match_test!(+ parse TypeParamBound<Infallible, SimplePath> : std :: fmt\n    :: Debug)"
---
Ok(
    Tr(
        TraitBound {
            q: false,
            for_lts: None,
            path: HigherOrderPath {
                leading: false,
                segments: MinLength(
                    Interlace {
                        values: [
                            Bare(
                                Id(
                                    Identifier(
                                        Ident(
                                            std,
                                        ),
                                    ),
                                ),
                            ),
                            Bare(
                                Id(
                                    Identifier(
                                        Ident(
                                            fmt,
                                        ),
                                    ),
                                ),
                            ),
                            Bare(
                                Id(
                                    Identifier(
                                        Ident(
                                            Debug,
                                        ),
                                    ),
                                ),
                            ),
                        ],
                    },
                ),
            },
        },
    ),
)
